Fixed Contact Information Invisiblility css. Added video to hero and header. Fixed Header navlink colour overlay

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
   h3 { @apply text-xl lg:text-2xl font-semibold; }
   
   p, li, span, label, input, textarea, button {
-    @apply text-base text-slate-50;
+    @apply text-base text-slate-700;
   }
 
   a {
